Fix several warnings during building
Signed-off-by: Arjan Tijms <arjan.tijms@omnifish.ee>